 - Added phrases for seperators in multiple value rendering (eg. the " and "
    in name lists. Searches are seperated by " <strong>OR<strong> "
 - added "boolean" to the is_browsable list. It acts like a 2 value set.
 - SearchExpressions now always call from_buffer with the offset, count and
    justids, if set.
 - Fixed icky error in SearchField::item_matches which halted if a subject
    no longer exists for some reason. Now logs an warning and muddles on.
 - Added a get_UTC_timestamp to Utils
 - Fixed the VLit non-port-80 bug. Added some new functionality, including
    a "scale" factor, and a "fax" detector.

2002-10-24 cjg
 - Fixed a bug in subjects multiple render join. Subject "join" is now <br/>
 - Renamed use_gdome to be enable_gdome for configure-like goodness.
 - <securehost> and <securepath> are now optional (in archive.xml)
 - Fixed a bug in the 2.1->2.2 SQL in bin/upgrade 

2002-10-28 cjg
 - No edit rules now means an editor can edit anything not nothing
 - new method "make_comment" in EPrints::Session
 - Fixed VLit & configure_archive to use whichever XML library is prefered.
 - more work on the tools/update_phrase_file utility to aid translation. Still
    not finished.

2002-10-29 cjg
 - Cleaned up ArchiveConfig.pm (views etc)
 - Citations may now use @title@ instead of &title; although this is optional
 - Changed default citation file to use @title@ format
 - Removed some junk from metadata-types.xml (junk comment)
 - Improved text about restarting apache in configure_archive
 - Added a --all option to export_hashes
 - Fixed bug in UTC timestamp function (now uses gmtime, like it was supposed 
    to)
 - Added parse_xml_string to EPrints::XML to do the obvious
 - Added Paracite module and cgi script to render reference links. Added 
    Citation/Parser to bundled libraries. Added a "seek" image for links
    to paracite.

2002-10-29 cjg
 - export_xml was using XML::DOM (now uses EPrints::XML)
