@@ -2,7 +2,6 @@ This is the rough and ready list of stuff that needs doing on
 eprints 2. It's really for my benefit, I include it here in
 case it might be helpful.
 
-PRE Release Checks for 2.2
 
 
 
@@ -18,6 +17,8 @@ PRE Release Checks for 2.2
 
 * 	Docs: 
 		- We need lots of RAM!
+
+*	Latest page (limit of n results?)
 
 *	Override auth option.
 
