@@ -6,18 +6,18 @@
 <ep:title>About the Archive</ep:title>
 <ep:body>
 
-<p>This archive is running on eprints.org open archive software, a freely distributable archive system available from <a href="http://www.eprints.org/">eprints.org</a>. </p>
+<p>This archive is running on GNU EPrints open archive software, a freely distributable archive system available from <a href="http://software.eprints.org/">software.eprints.org</a>. </p>
 
-<p>Other institutions are invited (and encouraged) to set up their own open archives for author <a href="http://www.eprints.org/self-faq/">self-archiving</a>, using the freely-distributable <a href="http://www.eprints.org/">eprints.org software</a> used at this site.</p>
+<p>Other institutions are invited (and encouraged) to set up their own open archives for author <a href="http://www.eprints.org/self-faq/">self-archiving</a>, using the freely-distributable <a href="http://software.eprints.org/">GNU EPrints software</a> used at this site.</p>
 
 <h2>Contact Information</h2>
 
 <p>Any correspondence concerning this specific archive should be sent to <a href="mailto:&adminemail;">&adminemail;</a>.</p>
 
 <h2>About this software</h2>
-<p>This site is running software from eprints.org / revision: &version;</p>
-<p>EPrints is free software developed by the University of Southampton, England.</p>
-<p>For more information see <a href="http://eprints.org/">eprints.org</a></p>
+<p>This site is running GNU EPrints / revision: &version;</p>
+<p>GNU EPrints is free software developed by the University of Southampton, England.</p>
+<p>For more information see <a href="http://eprints.org/">eprints.org</a> and <a href="http://software.eprints.org/">software.eprints.org</a></p>
 
 
 <h2>Technologies employed and supported:</h2>
